update  index.html

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Exercícicio Módulo 18</h1>
+        <h1>Exercício Módulo 18</h1>
     </header>
     <main>
         <div>
